fix center spacing

--- a/src/app/Home.css
+++ b/src/app/Home.css
@@ -38,9 +38,11 @@
   display: flex;
   flex-direction: column;
   justify-content: start;
-  align-items: flex-start;
+  align-items: center;
   flex: 1;
   min-width: 480px;
+  max-width: 600px;
+  margin-left: auto;
 }
 
 .right-column {
